test/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-echo-server 
spec:
  tls:
  - hosts:
      - localhost
    secretName: ingress-secret-cert
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /test-echo-server
        backend:
          service:
            name: test-echo-server 
            port: 
              number: 8001
