test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-echo-server 
spec:
  rules:
  - http:
      paths:
      - path: /test-echo-server
        backend:
          serviceName: test-echo-server 
          servicePort: 8001
